scripts/nullaway/annotator/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8.txt
../annotator/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:35: error: [NullAway] @NonNull field mission not initialized
	private Mission mission;
	                ^
    (see http://t.uber.com/nullaway )
../annotator/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Station.java:43: error: [NullAway] dereferenced expression app is @Nullable
				super.out.write( ( "\n\n" + app.getStatus() + "'\n\n").getBytes() );
				                               ^
    (see http://t.uber.com/nullaway )
../annotator/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:22: error: [NullAway] initializer method does not guarantee @NonNull fields out (line 17), din (line 18) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public TelnetClientServer( int clientId ) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:116: error: [NullAway] assigning @Nullable expression to @NonNull field
		out = null;
		    ^
    (see http://t.uber.com/nullaway )
../annotator/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/campaign/Mission.java:58: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return capitalShip;
		^
    (see http://t.uber.com/nullaway )
../annotator/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/Ship.java:84: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return shipParts.get(name);
		^
    (see http://t.uber.com/nullaway )
6 errors
